# TestLa

./: Dockerfile  README.md  pyproject.toml
fastapi-application/: .env.template  bot.py  create_fastapi_app.py  main.py
fastapi-application/alembic/versions/: 2025_01_24_2322-4262d79e3a95_add_products_table.py  2025_01_27_0036-5cfe5b715480_create_tokens_table.py
fastapi-application/api/api_v1/: __init__.py  products.py  users.py
fastapi-application/core/: config.py
fastapi-application/core/models/: __init__.py  pair.py
fastapi-application/core/schemas/: product.py  token.py  user.py
fastapi-application/crud/: products.py  users.py
fastapi-application/services/: scheduler.py
