[project]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = {version = "^2.7.1", extras = ["email"]}
pydantic-settings = "^2.2.1"
sqlalchemy = {version = "^2.0.30", extras = ["asyncio"]}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
gunicorn = "^23.0.0"
websocket = "^0.2.1"
orjson = "^3.10.15"
tenacity = "^9.0.0"
aiogram = "^3.17.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
